--- a/index.html
+++ b/index.html
@@ -559,6 +559,7 @@ async function fetchLatestVideos() {
         errorContainer.textContent = 'Error cargando videos: ' + err.message;
     }
 }
+document.addEventListener('DOMContentLoaded', fetchLatestVideos);
 </script>
 </body>
 </html>
