--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <meta property="og:url" content="https://fernandoabishai.com">
     <meta property="og:type" content="website">
     <title>Fernando Abishai - Contenido Tech & IA</title>
-    <link rel="icon" href="https://placehold.co/32x32/3b82f6/FFFFFF?text=FA" type="image/png">
+    <link rel="icon" href="media/logoSv.svg" type="image/svg+xml">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="css/custom.css">
     <style>
         :root {
             --color-dark: #0f0a1a;
@@ -216,7 +217,7 @@
             <div class="hidden md:flex space-x-2">
                 <a href="#inicio" class="text-gray-300 hover:text-blue-400 px-3 py-2 rounded-md text-sm font-medium">Inicio</a>
                 <a href="#videos" class="text-gray-300 hover:text-blue-400 px-3 py-2 rounded-md text-sm font-medium">Videos</a>
-                <a href="#blog" class="text-gray-300 hover:text-blue-400 px-3 py-2 rounded-md text-sm font-medium">Blog</a>
+                <a href="blog.html" class="text-white font-semibold bg-gradient-to-r from-pink-500 to-purple-500 px-4 py-2 rounded-lg transition">Blog</a>
                 <a href="#servicios" class="text-gray-300 hover:text-blue-400 px-3 py-2 rounded-md text-sm font-medium">Servicios</a>
                 <a href="#recursos" class="text-gray-300 hover:text-blue-400 px-3 py-2 rounded-md text-sm font-medium">Recursos</a>
                 <a href="#sobre-mi" class="text-gray-300 hover:text-blue-400 px-3 py-2 rounded-md text-sm font-medium">Sobre Mí</a>
@@ -227,8 +228,8 @@
             </button>
             <div id="mobileMenu" class="hidden absolute top-16 left-0 w-full bg-gray-800 p-4 shadow-lg md:hidden z-50">
                 <a href="#inicio" class="block text-gray-300 hover:text-blue-400 py-2">Inicio</a>
+                <a href="blog.html" class="block text-gray-300 hover:text-blue-400 py-2">Blog</a>
                 <a href="#videos" class="block text-gray-300 hover:text-blue-400 py-2">Videos</a>
-                <a href="#blog" class="block text-gray-300 hover:text-blue-400 py-2">Blog</a>
                 <a href="#servicios" class="block text-gray-300 hover:text-blue-400 py-2">Servicios</a>
                 <a href="#recursos" class="block text-gray-300 hover:text-blue-400 py-2">Recursos</a>
                 <a href="#sobre-mi" class="block text-gray-300 hover:text-blue-400 py-2">Sobre Mí</a>
@@ -259,16 +260,16 @@
             <h2 class="section-title">Artículos del Blog</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div class="card p-6">
-                    <img src="https://placehold.co/600x300/374151/9CA3AF?text=Articulo+Futuro+IA" alt="Imagen Artículo Futuro IA" class="w-full h-48 object-cover rounded-md mb-4" onerror="this.onerror=null;this.src='https://placehold.co/600x300/1f2937/FFFFFF?text=Error+Imagen';">
+                    <img loading="lazy" src="https://placehold.co/600x300/374151/9CA3AF?text=Articulo+Futuro+IA" alt="Imagen Artículo Futuro IA" class="w-full h-48 object-cover rounded-md mb-4" onerror="this.onerror=null;this.src='https://placehold.co/600x300/1f2937/FFFFFF?text=Error+Imagen';">
                     <h3 class="text-xl font-semibold mb-2 text-blue-300">El Rol de la IA en el Desarrollo de Software del Futuro</h3>
                     <p class="text-gray-400 mb-4 text-sm">Cómo la inteligencia artificial está transformando las herramientas y procesos para crear software.</p>
-                    <a href="#" class="btn btn-secondary">Leer Más</a>
+                    <a href="/posts/ia-desarrollo-software-futuro.html" class="btn btn-secondary">Leer Más</a>
                 </div>
                 <div class="card p-6">
-                    <img src="https://placehold.co/600x300/374151/9CA3AF?text=Articulo+Estrategia+Contenido" alt="Imagen Artículo Estrategia Contenido" class="w-full h-48 object-cover rounded-md mb-4" onerror="this.onerror=null;this.src='https://placehold.co/600x300/1f2937/FFFFFF?text=Error+Imagen';">
+                    <img loading="lazy" src="https://placehold.co/600x300/374151/9CA3AF?text=Articulo+Estrategia+Contenido" alt="Imagen Artículo Estrategia Contenido" class="w-full h-48 object-cover rounded-md mb-4" onerror="this.onerror=null;this.src='https://placehold.co/600x300/1f2937/FFFFFF?text=Error+Imagen';">
                     <h3 class="text-xl font-semibold mb-2 text-blue-300">Estrategias para Monetizar tu Contenido Tech (Afiliados y Más)</h3>
                     <p class="text-gray-400 mb-4 text-sm">Explora diversas formas de generar ingresos con tu conocimiento técnico, incluyendo marketing de afiliados.</p>
-                    <a href="#" class="btn btn-secondary">Leer Más</a>
+                    <a href="/posts/estrategias-monetizar-contenido-tech.html" class="btn btn-secondary">Leer Más</a>
                 </div>
             </div>
         </section>
@@ -297,7 +298,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="card">
                     <div class="resource-placeholder">
-                         <img src="https://placehold.co/400x225/8b5cf6/FFFFFF?text=Herramienta+IA+Pro" alt="Herramienta IA" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x225/1f2937/FFFFFF?text=Error+Carga';">
+                         <img loading="lazy" src="https://placehold.co/400x225/8b5cf6/FFFFFF?text=Herramienta+IA+Pro" alt="Herramienta IA" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x225/1f2937/FFFFFF?text=Error+Carga';">
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-2 text-blue-300">Nombre Herramienta AI PRO (Afiliado)</h3>
@@ -309,7 +310,7 @@
                 </div>
                 <div class="card">
                     <div class="resource-placeholder">
-                        <img src="https://placehold.co/400x225/ec4899/FFFFFF?text=eBook+DevOps" alt="eBook DevOps" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x225/1f2937/FFFFFF?text=Error+Carga';">
+                        <img loading="lazy" src="https://placehold.co/400x225/ec4899/FFFFFF?text=eBook+DevOps" alt="eBook DevOps" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x225/1f2937/FFFFFF?text=Error+Carga';">
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-2 text-blue-300">eBook: Guía Práctica de DevOps</h3>
@@ -321,7 +322,7 @@
                 </div>
                 <div class="card">
                      <div class="resource-placeholder">
-                        <img src="https://placehold.co/400x225/f97316/FFFFFF?text=Curso+Crypto+Avanzado" alt="Curso Crypto Avanzado" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x225/1f2937/FFFFFF?text=Error+Carga';">
+                        <img loading="lazy" src="https://placehold.co/400x225/f97316/FFFFFF?text=Curso+Crypto+Avanzado" alt="Curso Crypto Avanzado" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x225/1f2937/FFFFFF?text=Error+Carga';">
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-2 text-blue-300">Curso: Inversiones Crypto Avanzadas (Afiliado)</h3>
@@ -337,7 +338,7 @@
         <section id="sobre-mi" class="py-12 bg-gray-800 rounded-xl p-8 md:p-12 my-12">
             <h2 class="section-title !text-center !mb-6">Sobre Fernando Abishai</h2>
             <div class="flex flex-col md:flex-row items-center gap-8">
-                <img src="https://placehold.co/300x300/60a5fa/FFFFFF?text=Fernando+Abishai" alt="Foto de Fernando Abishai" class="w-48 h-48 md:w-60 md:h-60 rounded-full object-cover shadow-lg mx-auto md:mx-0" onerror="this.onerror=null;this.src='https://placehold.co/300x300/1f2937/FFFFFF?text=Error+Imagen';">
+                <img loading="lazy" src="media/logoIn.png" alt="Logo de Fernando Abishai" class="w-48 h-48 md:w-60 md:h-60 rounded-full object-cover shadow-lg mx-auto md:mx-0">
                 <div class="text-center md:text-left">
                     <p class="text-lg text-gray-300 mb-4">
                         ¡Hola! Soy Fernando Abishai, creador de contenido y entusiasta de la tecnología, especializado en Inteligencia Artificial, Herramientas de Desarrollo, y el ecosistema Crypto.
@@ -406,6 +407,7 @@
         <p class="text-gray-400">&copy; <span id="currentYear"></span> Fernando Abishai. Todos los derechos reservados.</p>
         <p class="text-gray-500 text-sm">Página creada para impulsar tu presencia digital.</p>
     </footer>
+    <script src="js/main.js"></script>
 
     <div id="messageModal" class="modal">
         <div class="modal-content">
@@ -526,9 +528,6 @@
     </script>
 <script>
 // Script para obtener y mostrar los últimos videos de YouTube
-const YOUTUBE_API_KEY = 'AIzaSyDF7YAUWSr5-181Bi_Hlmj3IGjmvIgGhh8';
-const YOUTUBE_CHANNEL_ID = 'UCScHfd5xGCYSLPKirOb_psg'; // Usar el channel ID directamente
-
 async function fetchLatestVideos() {
     const videosContainer = document.getElementById('youtube-videos');
     const errorContainer = document.getElementById('youtube-error');
@@ -536,30 +535,38 @@ async function fetchLatestVideos() {
     errorContainer.textContent = '';
 
     try {
-        // Llama a tu backend seguro en Vercel
-        const res = await fetch('/api/youtube-latest');
-        const data = await res.json();
-        if (!data.videos || data.videos.length === 0) {
-            throw new Error('No se encontraron videos largos recientes.');
+        const response = await fetch('/api/youtube-latest');
+        if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
         }
-        data.videos.forEach(video => {
-            const iframe = `<div class="card">
-                <div class="video-placeholder">
-                    <iframe width="100%" height="225" src="https://www.youtube.com/embed/${video.id}" title="${video.title}" frameborder="0" allowfullscreen class="w-full h-full aspect-video rounded-md"></iframe>
-                </div>
-                <div class="p-6">
-                    <h3 class="text-xl font-semibold mb-2 text-blue-300">${video.title}</h3>
-                    <p class="text-gray-400 mb-4 text-sm">${video.description.substring(0, 90)}...</p>
-                    <a href="${video.url}" target="_blank" rel="noopener" class="btn btn-secondary w-full text-center">Ver en YouTube</a>
-                </div>
-            </div>`;
-            videosContainer.innerHTML += iframe;
-        });
-    } catch (err) {
-        errorContainer.textContent = 'Error cargando videos: ' + err.message;
+        const data = await response.json();
+        
+        // The serverless function returns a `videos` array
+        if (data.videos && data.videos.length > 0) {
+            // The serverless function already filters, so we can limit to 4 here
+            const videosToShow = data.videos.slice(0, 4);
+            videosToShow.forEach(video => {
+                const videoElement = `
+                    <div class="col-md-3">
+                        <a href="${video.url}" target="_blank" class="video-card">
+                            <img src="${video.thumbnail}" alt="${video.title}" class="img-fluid">
+                            <h5>${video.title}</h5>
+                        </a>
+                    </div>
+                `;
+                videosContainer.innerHTML += videoElement;
+            });
+        } else {
+            errorContainer.textContent = 'No se encontraron videos recientes.';
+        }
+    } catch (error) {
+        console.error('Error fetching YouTube videos:', error);
+        errorContainer.textContent = 'Error al cargar los videos. Por favor, inténtalo de nuevo más tarde.';
     }
 }
-document.addEventListener('DOMContentLoaded', fetchLatestVideos);
+
+// Llama a la función al cargar la página
+fetchLatestVideos();
 </script>
 </body>
 </html>
